# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* Update auf SpringBoot 3.0.4.
* Feld ModulName in MDI-Maske hinzugefügt.
* Erhöhe Dependency software.amazon.awssdk:bom Version von 2.19.31 auf 2.20.29.

## [12.59.0] -- 2023-02-07
* #362 Zugriff auf weitere Datenbanken unterstützen (zumindest über Views).
* Property `aero.minova.database.kind` durch `spring.jooq.sql-dialect` ersetzt.
* Proof of Concept Test für SQLViewController#getIndexView
* Kopieren in MDI-Maske ermöglichen, um die Bedienung zu vereinfachen
* Extension-Doku erweitern.
* Prozedur xpcasInsertAllPrivilegesToUserGroup anpassen, sodass immer LastAction 1 beim Neueintragen von Privilegien gesetzt wird.
* CI-Pipeline Updates: `AdoptOpenJDK` wird zu `Eclipse Temurin`.
* Erhöhe Lombok Version von 1.18.24 auf 1.18.26.
* Erhöhe Dependency software.amazon.awssdk:bom Version von 2.19.31 auf 2.19.32.

## [12.58.0] -- 2023-01-27
* Update auf SpringBoot 3.0.2
* S3 Abhängigkeit aus AWS SDK's BOM für Erweiterungen bereitstellen.

## [12.57.2] -- 2023-01-20
* Index Filtern mit Postgres ermöglichen
* connection.close() im Fehlerfall immer aufrufen, systemDatabase.freeUpConnection(connection) nur, wenn alles funktioniert hat. Hintergrund: Bislang haben nach einer fehlerhaften View-Anfrage auch alle weiteren Views nicht mehr funktioniert.
* link:https://github.com/minova-afis/aero.minova.cas/issues/425[\#425]: Die xref:service/doc/adoc/extensions.adoc#[Doku für CAS-Erweiterungen] wurde vervollständigt.
  Vor allem wurde das Verwenden von Abhängigkeiten in Erweiterungen dokumentiert,
  um Auslieferungs-Probleme in der Zukunft zu vermeiden.
* Hilfsmethode setValue() in Table

## [12.57.1] -- 2023-01-16